# deal-finder-bot

./: Cargo.toml
src/: funcs.rs  main.rs  structs.rs
src/commands/: mod.rs  ping.rs  scraper.rs
