[package]
name = "deal-scrapper-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
reqwest = { version = "0.11.20", features = ["blocking"] }
lazy_static = "1.4.0"
shuttle-poise = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-secrets = "0.25.0"
tracing = "0.1.37"
tokio = "1.26.0"
chrono = "0.4.30"
scraper = "0.17.1"
url = "2.4.1"
headless_chrome = "1.0.5"

